# ObjectModel

./: README.md  pyproject.toml
examples/: capabilities.py
objectmodel/: __init__.py  colormap.py  node.py  objectitemdelegate.py  objectmodel.py  testnode.py  undoarrayinsert.py  undoarrayremove.py  undovaluechange.py
